--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,28 @@
-# General Application Settings
-spring.application.name=Metquay
+spring.application.name=Metquay_Blogs
 server.port=3000
-vaadin.launch-browser=true
 
-# Database Configuration (PostgreSQL)
+# JWT Secret
+jwt.secret=W7ZRJ3random4secretBH4forPV4jwtR
+jwt.expiry.ms=86400000
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/blogdb
 spring.datasource.username=bloguser
 spring.datasource.password=blogpass
 
+# JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Default Spring Security User (for simple auth fallback)
-spring.security.user.name=admin
-spring.security.user.password=admin123
 
-# Multipart Upload Settings
-spring.servlet.multipart.max-request-size=10MB
-spring.servlet.multipart.max-file-size=10MB
+# Logging Configuration
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.web=INFO
+logging.level.org.springframework.security=INFO
+logging.level.com.example.Metquay=INFO
+
+
+vaadin.frontend.theme=my-theme
+app.autofill.credentials=true
